Fix horizontal overflow issue on smaller screen like iPhone SE

--- a/src/styles/_about-section.scss
+++ b/src/styles/_about-section.scss
@@ -15,7 +15,7 @@
   }
 
   #about-image {
-    max-width: 27.5em;
+    max-width: min(27.5em, 100vw);
   }
   
   display: flex;
