--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -8,6 +8,7 @@
   color: white;
   text-decoration: none;
   position: fixed;
+  max-width: 100vw;
   width: 100%;
   transition: top 0.5s, color 0.4s, background-color 0.3s;
   z-index: 1;
